// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink active NavLink renders correctly 1`] = `
<Link
  className="nav-link nav-text active"
  data-test="navlink-Sign In"
  key="{props.key}"
  onClick={[Function]}
  replace={false}
  to="/sign-in"
>
  Sign In
</Link>
`;

exports[`NavLink inactive NavLink renders correctly 1`] = `
<Link
  className="nav-link nav-text "
  data-test="navlink-Sign Up"
  key="{props.key}"
  onClick={[Function]}
  replace={false}
  to="/sign-up"
>
  Sign Up
</Link>
`;
